--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+python-dotenv==0.20.0
 requests==2.28.1
+requests-toolbelt==0.9.1
 urllib3==1.26.11
+waitress==2.1.2
 Werkzeug==2.2.2
